[project]
name = "localization-sim"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "localization-python",
    "numpy==2",
    "opencv-python>=4.12.0.88",
    "pygame==2.6.1",
    "python-dotenv==1.1.1",
]

[tool.uv.workspace]
members = [
    "lib/localization_python",
]

[tool.uv.sources]
localization-python = { workspace = true, editable = true }
