[project]
name = "localization-sim"
version = "0.1.0"
requires-python = "==3.10.*" # Jetson Orin uses 3.10.12
dependencies = [
    "localization-python",
    "numpy==2.*",
    "opencv-python>=4.5, <5",
    "pathfinding-python",
    "pygame>=2.6, <3",
    "python-dotenv==1.1.1",
]

[tool.uv.workspace]
members = [
    "lib/localization_python",
    "lib/pathfinding_python",
]

[tool.uv.sources]
localization-python = { workspace = true, editable = true }
pathfinding-python = { workspace = true }
